dev.log
▲ Next.js 16.2.9 (Turbopack)
- Local:         http://localhost:3000
- Network:       http://192.168.56.1:3000
- Environments: .env.local, .env
✓ Ready in 708ms
⚠ Warning: Next.js inferred your workspace root, but it may not be correct.
 We detected multiple lockfiles and selected the directory of C:\Users\2AM\package-lock.json as the root directory.
 To silence this warning, set `turbopack.root` in your Next.js config, or consider removing one of the lockfiles if it's not needed.
   See https://nextjs.org/docs/app/api-reference/config/next-config-js/turbopack#root-directory for more information.
 Detected additional lockfiles: 
   * C:\Users\2AM\Downloads\bestportfolio\bun.lock

⚠ The "middleware" file convention is deprecated. Please use "proxy" instead. Learn more: https://nextjs.org/docs/messages/middleware-to-proxy

 GET / 200 in 888ms (next.js: 261ms, application-code: 626ms)
Get blogs error: Error [PrismaClientInitializationError]: 
Invalid `__TURBOPACK__imported__module__$5b$project$5d2f$Downloads$2f$bestportfolio$2f$src$2f$lib$2f$db$2e$ts__$5b$app$2d$route$5d$__$28$ecmascript$29$__["db"].blogPost.findMany()` invocation in
C:\Users\2AM\Downloads\bestportfolio\.next\dev\server\chunks\[root-of-the-server]__1y3nd94._.js:118:189

  115         }
  116     ];
  117 }
→ 118 const blogs = await __TURBOPACK__imported__module__$5b$project$5d2f$Downloads$2f$bestportfolio$2f$src$2f$lib$2f$db$2e$ts__$5b$app$2d$route$5d$__$28$ecmascript$29$__["db"].blogPost.findMany(
error: Error validating datasource `db`: the URL must start with the protocol `file:`.
  -->  schema.prisma:7
   | 
 6 |   provider = "sqlite"
 7 |   url      = env("DATABASE_URL")
   | 

Validation Error Count: 1
    at <unknown> (src\app\api\blogs\route.ts:29:37)
    at <unknown> (-->  schema.prisma:7)
    at async GET (src\app\api\blogs\route.ts:29:19)
  27 |     }
  28 |
> 29 |     const blogs = await db.blogPost.findMany({
     |                                     ^
  30 |       where: Object.keys(where).length > 0 ? where : undefined,
  31 |       orderBy: { createdAt: 'desc' },
  32 |     }) {
  clientVersion: '6.19.3',
  errorCode: undefined,
  retryable: undefined
}
Get projects error: Error [PrismaClientInitializationError]: 
Invalid `__TURBOPACK__imported__module__$5b$project$5d2f$Downloads$2f$bestportfolio$2f$src$2f$lib$2f$db$2e$ts__$5b$app$2d$route$5d$__$28$ecmascript$29$__["db"].project.findMany()` invocation in
C:\Users\2AM\Downloads\bestportfolio\.next\dev\server\chunks\[root-of-the-server]__0gpsrpu._.js:99:191

  96 if (featured !== null) {
  97     where.featured = featured === 'true';
  98 }
→ 99 const projects = await __TURBOPACK__imported__module__$5b$project$5d2f$Downloads$2f$bestportfolio$2f$src$2f$lib$2f$db$2e$ts__$5b$app$2d$route$5d$__$28$ecmascript$29$__["db"].project.findMany(
error: Error validating datasource `db`: the URL must start with the protocol `file:`.
  -->  schema.prisma:7
   | 
 6 |   provider = "sqlite"
 7 |   url      = env("DATABASE_URL")
   | 

Validation Error Count: 1
    at <unknown> (src\app\api\projects\route.ts:16:39)
    at <unknown> (-->  schema.prisma:7)
    at async GET (src\app\api\projects\route.ts:16:22)
  14 |     }
  15 |
> 16 |     const projects = await db.project.findMany({
     |                                       ^
  17 |       where: Object.keys(where).length > 0 ? where : undefined,
  18 |       orderBy: { createdAt: 'desc' },
  19 |     }) {
  clientVersion: '6.19.3',
  errorCode: undefined,
  retryable: undefined
}
Get courses error: Error [PrismaClientInitializationError]: 
Invalid `__TURBOPACK__imported__module__$5b$project$5d2f$Downloads$2f$bestportfolio$2f$src$2f$lib$2f$db$2e$ts__$5b$app$2d$route$5d$__$28$ecmascript$29$__["db"].course.findMany()` invocation in
C:\Users\2AM\Downloads\bestportfolio\.next\dev\server\chunks\[root-of-the-server]__1aa6pnr._.js:93:189

  90 ;
  91 async function GET() {
  92     try {
→ 93         const courses = await __TURBOPACK__imported__module__$5b$project$5d2f$Downloads$2f$bestportfolio$2f$src$2f$lib$2f$db$2e$ts__$5b$app$2d$route$5d$__$28$ecmascript$29$__["db"].course.findMany(
error: Error validating datasource `db`: the URL must start with the protocol `file:`.
  -->  schema.prisma:7
   | 
 6 |   provider = "sqlite"
 7 |   url      = env("DATABASE_URL")
   | 

Validation Error Count: 1
    at <unknown> (src\app\api\courses\route.ts:7:37)
    at <unknown> (-->  schema.prisma:7)
    at async GET (src\app\api\courses\route.ts:7:21)
   5 | export async function GET() {
   6 |   try {
>  7 |     const courses = await db.course.findMany({
     |                                     ^
   8 |       orderBy: { createdAt: 'desc' },
   9 |       include: {
  10 |         _count: { {
  clientVersion: '6.19.3',
  errorCode: undefined,
  retryable: undefined
}
Get profile error: Error [PrismaClientInitializationError]: 
Invalid `__TURBOPACK__imported__module__$5b$project$5d2f$Downloads$2f$bestportfolio$2f$src$2f$lib$2f$db$2e$ts__$5b$app$2d$route$5d$__$28$ecmascript$29$__["db"].profile.findFirst()` invocation in
C:\Users\2AM\Downloads\bestportfolio\.next\dev\server\chunks\[root-of-the-server]__06yd4jn._.js:80:190

  77 ;
  78 async function GET() {
  79     try {
→ 80         const profile = await __TURBOPACK__imported__module__$5b$project$5d2f$Downloads$2f$bestportfolio$2f$src$2f$lib$2f$db$2e$ts__$5b$app$2d$route$5d$__$28$ecmascript$29$__["db"].profile.findFirst(
error: Error validating datasource `db`: the URL must start with the protocol `file:`.
  -->  schema.prisma:7
   | 
 6 |   provider = "sqlite"
 7 |   url      = env("DATABASE_URL")
   | 

Validation Error Count: 1
    at <unknown> (src\app\api\profile\route.ts:6:38)
    at <unknown> (-->  schema.prisma:7)
    at async GET (src\app\api\profile\route.ts:6:21)
  4 | export async function GET() {
  5 |   try {
> 6 |     const profile = await db.profile.findFirst()
    |                                      ^
  7 |
  8 |     if (!profile) {
  9 |       return NextResponse.json( {
  clientVersion: '6.19.3',
  errorCode: undefined,
  retryable: undefined
}
 GET /api/blogs?published=true 500 in 1401ms (next.js: 179ms, proxy.ts: 96ms, application-code: 1127ms)
 GET /api/projects?featured=true 500 in 1407ms (next.js: 263ms, proxy.ts: 97ms, application-code: 1047ms)
 GET /api/courses 500 in 1399ms (next.js: 309ms, proxy.ts: 96ms, application-code: 995ms)
 GET /api/profile 500 in 1397ms (next.js: 364ms, proxy.ts: 96ms, application-code: 937ms)
 GET /api/chat-status 200 in 1395ms (next.js: 410ms, proxy.ts: 97ms, application-code: 888ms)
 GET / 200 in 197ms (next.js: 20ms, application-code: 177ms)
 GET /service-worker.js 404 in 77ms (next.js: 16ms, application-code: 61ms)
SyntaxError: C:\Users\2AM\Downloads\bestportfolio\package.json (directory description file): SyntaxError: C:\Users\2AM\Downloads\bestportfolio\package.json (directory description file): SyntaxError: Expected ',' or '}' after property value in JSON at position 523 (line 14 column 7)
    at JSON.parse (<anonymous>)
    [2m[at Object.<anonymous> (C:\Users\2AM\Downloads\bestportfolio\node_modules\enhanced-resolve\lib\CachedInputFileSystem.js:634:26)][0m
    [2m[at CacheBackend.provideSync (C:\Users\2AM\Downloads\bestportfolio\node_modules\enhanced-resolve\lib\CachedInputFileSystem.js:348:67)][0m
    [2m[at SyncAsyncFileSystemDecorator.readJson (C:\Users\2AM\Downloads\bestportfolio\node_modules\enhanced-resolve\lib\SyncAsyncFileSystemDecorator.js:197:29)][0m
    [2m[at iterFilename (C:\Users\2AM\Downloads\bestportfolio\node_modules\enhanced-resolve\lib\DescriptionFileUtils.js:125:24)][0m
    [2m[at next (C:\Users\2AM\Downloads\bestportfolio\node_modules\enhanced-resolve\lib\forEachBail.js:35:3)][0m
    [2m[at forEachBail (C:\Users\2AM\Downloads\bestportfolio\node_modules\enhanced-resolve\lib\forEachBail.js:49:9)][0m
    [2m[at findDescriptionFile (C:\Users\2AM\Downloads\bestportfolio\node_modules\enhanced-resolve\lib\DescriptionFileUtils.js:199:3)][0m
    [2m[at onLevelDone (C:\Users\2AM\Downloads\bestportfolio\node_modules\enhanced-resolve\lib\DescriptionFileUtils.js:192:10)][0m
    [2m[at C:\Users\2AM\Downloads\bestportfolio\node_modules\enhanced-resolve\lib\forEachBail.js:39:13][0m
✓ Compiled in 1035ms
SyntaxError: C:\Users\2AM\Downloads\bestportfolio\package.json (directory description file): SyntaxError: C:\Users\2AM\Downloads\bestportfolio\package.json (directory description file): SyntaxError: Expected ',' or '}' after property value in JSON at position 521 (line 14 column 5)
    at JSON.parse (<anonymous>)
    [2m[at Object.<anonymous> (C:\Users\2AM\Downloads\bestportfolio\node_modules\enhanced-resolve\lib\CachedInputFileSystem.js:634:26)][0m
    [2m[at CacheBackend.provideSync (C:\Users\2AM\Downloads\bestportfolio\node_modules\enhanced-resolve\lib\CachedInputFileSystem.js:348:67)][0m
    [2m[at SyncAsyncFileSystemDecorator.readJson (C:\Users\2AM\Downloads\bestportfolio\node_modules\enhanced-resolve\lib\SyncAsyncFileSystemDecorator.js:197:29)][0m
    [2m[at iterFilename (C:\Users\2AM\Downloads\bestportfolio\node_modules\enhanced-resolve\lib\DescriptionFileUtils.js:125:24)][0m
    [2m[at next (C:\Users\2AM\Downloads\bestportfolio\node_modules\enhanced-resolve\lib\forEachBail.js:35:3)][0m
    [2m[at forEachBail (C:\Users\2AM\Downloads\bestportfolio\node_modules\enhanced-resolve\lib\forEachBail.js:49:9)][0m
    [2m[at findDescriptionFile (C:\Users\2AM\Downloads\bestportfolio\node_modules\enhanced-resolve\lib\DescriptionFileUtils.js:199:3)][0m
    [2m[at onLevelDone (C:\Users\2AM\Downloads\bestportfolio\node_modules\enhanced-resolve\lib\DescriptionFileUtils.js:192:10)][0m
    [2m[at C:\Users\2AM\Downloads\bestportfolio\node_modules\enhanced-resolve\lib\forEachBail.js:39:13][0m
✓ Compiled in 1104ms
